--- a/public/index.html
+++ b/public/index.html
@@ -2,146 +2,51 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Processing + Firebase</title>
+    <script type="text/javascript" src="script.js"></script> 
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
     <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
     <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
     <script language="javascript" type="text/javascript" src="sketches/sketch.js"></script>
-    <style media="screen">
-      body {
-        font-family: 'Source Code Pro', monospace;
-        background-color: #757575;
-        color: rgba(0,0,0,0.87);
-      }
-
-      a {
-        color: rgb(3,155,229);
-
-      }
-
-      #message {
-        float:left;
-        width: 100%;
-        max-width: 400px;
-        margin: 40px auto;
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-        border-radius: 2px;
-        background: white;
-        padding: 16px 24px;
-        margin: 3rem 2rem;
-      }
-
-      #message h1 {
-        font-size: 22px;
-        font-weight: 500;
-        text-align: center;
-        margin: 0 0 16px;
-      }
-
-      #message p {
-        text-align: center;
-        font-weight: 300;
-        line-height: 150%;
-      }
-
-      #message ul {
-        list-style: none;
-        margin: 16px 0 0;
-        padding: 0;
-        text-align: center;
-      }
-
-      #message li a {
-        display: inline-block;
-        padding: 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-weight: 500;
-        background: rgb(3,155,229);
-        color: white;
-        border: 1px solid rgb(3,155,229);
-        border-radius: 3px;
-        font-size: 14px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-      }
-
-      #message button {
-        display: block;
-        margin: auto;
-        font-family: 'Source Code Pro', monospace;
-        font-size: 12px;
-        padding: 0.8rem 2rem;
-        font-size:10px;
-        background-color: #09ffc8;
-        border: none;
-        cursor: pointer;
-      }
-      #message button:hover {
-        background-color: #046f57;
-        color: white;
-      }
-      #message button:focus {
-        background: #09ffc8;
-        color:#046f57;
-        outline: none;
-      }
-      #color-container {
-        display: inline-block;
-        background-color: white;
-        padding: 0.8rem 2rem;
-      }
-      canvas {
-        margin: auto;
-        display: block;
-        border-radius: 4px;
-        border: 1px solid;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-  <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '355669474823465',
-      xfbml      : true,
-      version    : 'v2.7'
-    });
-  };
+    <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '355669474823465',
+        xfbml      : true,
+        version    : 'v2.7'
+      });
+    };
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-    <div id="message">
-      <h1>Processing</h1>
-      <p>Modifica mi sketch</p>
-      <button class="login-button" id="quickstart-sign-in">Login</button>
-    </div>
-    <div id="color-container">
-      <section class="realtime-colors">
-        <h2>Envía el color que quieras</h>
-        <div id="data-container"></div>
-        <input type="text" id="selected-color">
-        <button id="send">Enviar</button>
-      </section>
-    </div>
-      <div class="quickstart-user-details-container">
-        Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
+  <div id="message">
+    <h1>Processing</h1>
+    <p>Modifica mi sketch</p>
+    <button id="quickstart-sign-in" class="login-button" ></button>
+  </div>
+  <div id="color-container" class="on">
+    <section class="realtime-colors">
+      <h1 id="user-name"></h1>
+      <h2>Envía el color que quieras</h> 
+
+      <div id="data-container"></div>
+      <input type="text" id="selected-color">
+      <button id="send">Enviar</button>
+    </section>
+  </div>
   </body>
-
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
     <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -170,102 +75,5 @@
       firebase.database().ref('setcolor/').child('hex').set('#123456')
       return console.log('guardado')
     }
-  </script>
-
-
-
-<script type="text/javascript">
-    /**
-     * Function called when clicking the Login/Logout button.
-     */
-    // [START buttoncallback]
-    function toggleSignIn() {
-      if (!firebase.auth().currentUser) {
-        // [START createprovider]
-        var provider = new firebase.auth.FacebookAuthProvider();
-        // [END createprovider]
-        // [START addscopes]
-        provider.addScope('user_birthday');
-        // [END addscopes]
-        // [START signin]
-        firebase.auth().signInWithPopup(provider).then(function(result) {
-          // This gives you a Facebook Access Token. You can use it to access the Facebook API.
-          var token = result.credential.accessToken;
-          // The signed-in user info.
-          var user = result.user;
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-oauthtoken').textContent = token;
-          // [END_EXCLUDE]
-        }).catch(function(error) {
-          // Handle Errors here.
-          var errorCode = error.code;
-          var errorMessage = error.message;
-          // The email of the user's account used.
-          var email = error.email;
-          // The firebase.auth.AuthCredential type that was used.
-          var credential = error.credential;
-          // [START_EXCLUDE]
-          if (errorCode === 'auth/account-exists-with-different-credential') {
-            alert('You have already signed up with a different auth provider for that email.');
-            // If you are using multiple auth providers on your app you should handle linking
-            // the user's accounts here.
-          } else {
-            console.error(error);
-          }
-          // [END_EXCLUDE]
-        });
-        // [END signin]
-      } else {
-        // [START signout]
-        firebase.auth().signOut();
-        // [END signout]
-      }
-      // [START_EXCLUDE]
-      document.getElementById('quickstart-sign-in').disabled = true;
-      // [END_EXCLUDE]
-    }
-    // [END buttoncallback]
-    /**
-     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
-     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
-     *    out, and that is where we update the UI.
-     */
-    function initApp() {
-      // Listening for auth state changes.
-      // [START authstatelistener]
-      firebase.auth().onAuthStateChanged(function(user) {
-        if (user) {
-          // User is signed in.
-          var displayName = user.displayName;
-          var email = user.email;
-          var emailVerified = user.emailVerified;
-          var photoURL = user.photoURL;
-          var isAnonymous = user.isAnonymous;
-          var uid = user.uid;
-          var providerData = user.providerData;
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
-          document.getElementById('quickstart-sign-in').textContent = 'Log out';
-          document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
-          // [END_EXCLUDE]
-        } else {
-          // User is signed out.
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
-          document.getElementById('quickstart-sign-in').textContent = 'Log in with Facebook';
-          document.getElementById('quickstart-account-details').textContent = 'null';
-          document.getElementById('quickstart-oauthtoken').textContent = 'null';
-          // [END_EXCLUDE]
-        }
-        // [START_EXCLUDE]
-        document.getElementById('quickstart-sign-in').disabled = false;
-        // [END_EXCLUDE]
-      });
-      // [END authstatelistener]
-      document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
-    }
-    window.onload = function() {
-      initApp();
-    };
   </script>
 </html>
